common-applications/infra-test-cluster/hk/openubmc-robot/robot-universal-welcome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robot-universal-welcome-service
  namespace: robot-openubmc
spec:
  ports:
  - name: http-port
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: robot-universal-welcome
  type: ClusterIP
